--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.4.1
 Django==3.2.8
 django-environ==0.8.1
 django-environ-2==2.3.0
+gunicorn==20.1.0
 Pillow==8.4.0
 psycopg2==2.9.1
 pytz==2021.3
