--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
-asgiref==3.4.1
-boto3==1.19.6
-botocore==1.22.6
-Django==3.2.8
+asgiref==3.5.0
+boto3==1.20.50
+botocore==1.23.50
+Django==4.0.2
 django-environ==0.8.1
 django-environ-2==2.3.0
-django-storages==1.12.2
+django-storages==1.12.3
 gunicorn==20.1.0
 jmespath==0.10.0
-Pillow==8.4.0
-psycopg2==2.9.1
+Pillow==9.0.1
+psycopg2==2.9.3
 python-dateutil==2.8.2
 pytz==2021.3
-s3transfer==0.5.0
+s3transfer==0.5.1
 six==1.16.0
 sqlparse==0.4.2
-urllib3==1.26.7
+tzdata==2021.5
+urllib3==1.26.8
