--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,12 @@ botocore==1.23.50
 Django==4.0.2
 django-environ==0.8.1
 django-environ-2==2.3.0
+django-markdownx==3.0.1
 django-storages==1.12.3
 gunicorn==20.1.0
+importlib-metadata==4.11.0
 jmespath==0.10.0
+Markdown==3.3.6
 Pillow==9.0.1
 psycopg2==2.9.3
 python-dateutil==2.8.2
@@ -16,3 +19,4 @@ six==1.16.0
 sqlparse==0.4.2
 tzdata==2021.5
 urllib3==1.26.8
+zipp==3.7.0
